--- a/index.html
+++ b/index.html
@@ -562,6 +562,7 @@ margin-top: 3px;
 
 <div class="playlistContainer">
     <div class="playlistHeader" onclick="toggleList('list4')">
+        <span class="new-badge">NEW!!</span>
         <img src="Poster.jpg" alt="LOT-III Singles" onerror="this.src='https://via.placeholder.com/80/6a5bff/fff?text=Music'">
         <div>
             <div class="playlistTitle">LOT-III Singles</div>
@@ -989,6 +990,7 @@ function formatTime(s) {
 </script>
 </body>
 </html>
+
 
 
 
