--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@ margin-top: 3px;
     <div id="list1" class="songList"></div>
 </div>
 
-<div class="playlistContainer">
+<div class="playlistContainer new-release">
     <div class="playlistHeader" onclick="toggleList('list4')">
         <span class="new-badge">NEW!!</span>
         <img src="Poster.jpg" alt="LOT-III Singles" onerror="this.src='https://via.placeholder.com/80/6a5bff/fff?text=Music'">
@@ -857,6 +857,7 @@ window.onload = setupPlaylists;
 </script>
 </body>
 </html>
+
 
 
 
