--- a/index.html
+++ b/index.html
@@ -630,9 +630,9 @@ margin-top: 3px;
 <audio id="audio"></audio>
 
 <script type="module">
-    // --- FIREBASE INITIALIZATION (Consolidated) ---
+    // --- FIREBASE INITIALIZATION ---
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-    import { getFirestore, doc, updateDoc, getDoc } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
+    import { getFirestore, doc, updateDoc, getDoc, getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js";
 
     const firebaseConfig = {
         apiKey: "AIzaSyDohsquOam8YQXz7tqrWOG5f4pcXh-CnBM",
@@ -646,7 +646,7 @@ margin-top: 3px;
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
 
-    // Global access for the functions used in inline HTML onclicks
+    // Global access for the functions
     window.db = db;
     window.doc = doc;
     window.updateDoc = updateDoc;
@@ -728,6 +728,91 @@ const playlists = {
     list3: [ "Harishankar ku irukka.mp3", "Happy Birthday Megharajan.mp3", "Bomb.mp3", "Sanjai.mp3" ]
 };
 
+const songAnimations = {
+    "Intermission(LOT-III)": "#ff4d6d",
+    "Saavachuruven unna(LOT-III)": "#4dd6ff",
+    "Sivagasi's Daaha(LOT-III)": "#ffa600",
+    "The namechange(LOT-III)": "#bb6bff",
+    "Flute anthem(LOT-III)": "#00ffbf",
+    "Item number 1(LOT-III)": "#ffd700",      
+    "Saavadi Saravedi(LOT-III)": "#ff4500", 
+    "Jishnu Anthem": "#00ff88",
+    "default": "#6a5bff"
+};
+
+/* TRENDING LOGIC RESTORED */
+const allSongsForTrending = Object.keys(artists).filter(key => key !== 'default').map(displayName => {
+    let cover = "Poster.jpg";
+    if (displayName.includes("Jishnu Anthem")) cover = "Poster2.jpeg";
+    if (displayName.includes("Bomb") || displayName.includes("Sanjai")) cover = "poster4.png";
+    if (displayName.includes("Harishankar")) cover = "Poster3.jpeg";
+    if (displayName.includes("Happy Birthday")) cover = "poster3.png";
+
+    return { 
+        name: displayName, 
+        dbName: displayName.replace(/[()]/g, '').replace(/[^a-zA-Z0-9]/g, ''), 
+        cover: cover 
+    };
+});
+
+function formatViews(num) {
+    if (num === undefined) return "0 views";
+    if (num >= 1000) return (num / 1000).toFixed(1) + 'K views';
+    return num + ' views';
+}
+
+function renderTrendingUI(viewsMap) {
+    const listElem = document.getElementById("trendingList");
+    listElem.innerHTML = ''; 
+
+    const sortedTrending = allSongsForTrending.slice().sort((a, b) => {
+        const viewsA = viewsMap[a.dbName] || 0;
+        const viewsB = viewsMap[b.dbName] || 0;
+        return viewsB - viewsA;
+    });
+
+    sortedTrending.slice(0, 3).forEach((song, idx) => {
+        const item = document.createElement("li");
+        item.className = "trendingItem";
+        
+        let playlistId = null, playlistIndex = -1;
+        for (const listId in playlists) {
+            playlistIndex = playlists[listId].findIndex(f => {
+                let clean = f.replace(".mp3", "");
+                if (listId === 'list1' || listId === 'list4') {
+                   if (clean === "Sivagasis Daaha x Saavachuruven unna") clean = "Sivagasi's Dahaa x Saavachuruven unna(LOT-III)";
+                   else if (clean === "Sivagasi's Daaha") clean = "Sivagasi's Daaha(LOT-III)";
+                   else clean = clean + "(LOT-III)";
+                }
+                return clean === song.name;
+            });
+            if (playlistIndex !== -1) { playlistId = listId; break; }
+        }
+
+        item.innerHTML = `
+           <div class="trendingRank">#${idx + 1}</div>
+           <img class="trendingCover" src="${song.cover}" alt="${song.name}">
+           <div class="trendingInfo">
+               <div class="trendingTitle">${song.name}</div>
+               <div class="trendingViews">${artists[song.name] || "Artist"} • ${formatViews(viewsMap[song.dbName])}</div>
+           </div>
+        `;
+
+        item.onclick = () => { if (playlistId) playSong(playlistId, playlistIndex); };
+        listElem.appendChild(item);
+    });
+}
+
+async function fetchAndRenderTrending() {
+    if (!window.db) { setTimeout(fetchAndRenderTrending, 100); return; }
+    try {
+        const docRef = window.doc(window.db, "all_songs_views", "all_song_data");
+        const docSnap = await window.getDoc(docRef);
+        if (docSnap.exists()) renderTrendingUI(docSnap.data().views_map || {});
+    } catch (e) { console.error(e); }
+}
+
+/* PLAYER LOGIC */
 function simplifyDisplayName(displayName) {
     return displayName.replace(/[()]/g, '').replace(/[^a-zA-Z0-9]/g, '');
 }
@@ -773,8 +858,9 @@ async function incrementView(displayName) {
             const viewsMap = data.views_map || {};
             viewsMap[dbName] = (viewsMap[dbName] || 0) + 1;
             await window.updateDoc(docRef, { views_map: viewsMap });
+            renderTrendingUI(viewsMap);
         }
-    } catch (e) { console.error("Firebase Update Error:", e); }
+    } catch (e) { console.error(e); }
 }
 
 function playSong(list, index) {
@@ -783,6 +869,9 @@ function playSong(list, index) {
     const fileName = playlists[list][index];
     const clean = fileName.replace(".mp3", "");
     let displayName = clean;
+    if(clean === "Harishankar ku irukka") displayName = "Harishankar ku irukka?";
+    if(clean === "Bomb") displayName = "Bomb (Endhu 1cm)";
+    if(clean === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
     if (list === 'list1' || list === 'list4') {
         if (clean === "Sivagasis Daaha x Saavachuruven unna") displayName = "Sivagasi's Dahaa x Saavachuruven unna(LOT-III)";
         else displayName = clean + "(LOT-III)";
@@ -793,8 +882,16 @@ function playSong(list, index) {
     document.getElementById("playPauseIcon").innerText = "⏸";
     document.getElementById("seekContainer").style.display = "flex";
     document.body.classList.add("pulsing");
+    
     incrementView(displayName);
     showPopup(displayName, artists[displayName] || "G.R.Adhavh", list);
+    applySongTheme(songAnimations[displayName] || "#6a5bff");
+}
+
+function applySongTheme(color){
+    document.documentElement.style.setProperty('--song-color', color);
+    document.body.style.background = `radial-gradient(circle at center, ${color}22 0%, #0a0f2e 100%)`;
+    document.querySelectorAll("#soundwave div").forEach(w => w.style.background = color);
 }
 
 function togglePlay() {
@@ -831,10 +928,14 @@ function showPopup(name, artist, list) {
     let img = document.getElementById("popupImg");
     if (list === 'list1' || list === 'list4') img.src = "Poster.jpg";
     else if (list === 'list2') img.src = "Poster2.jpeg";
-    else img.src = "Poster3.jpeg";
+    else {
+        if (name.includes("Bomb") || name.includes("Sanjai")) img.src = "poster4.png";
+        else if (name.includes("Harishankar")) img.src = "Poster3.jpeg";
+        else if (name.includes("Happy Birthday")) img.src = "poster3.png";
+        else img.src = "Poster3.jpeg";
+    }
 }
 
-// Progress Bar Logic
 const audio = document.getElementById("audio");
 const seekSlider = document.getElementById("seekSlider");
 audio.addEventListener('timeupdate', () => {
@@ -853,10 +954,14 @@ function formatTime(s) {
     return m + ":" + (sec < 10 ? "0" + sec : sec);
 }
 
-window.onload = setupPlaylists;
+window.onload = () => {
+    setupPlaylists();
+    fetchAndRenderTrending();
+};
 </script>
 </body>
 </html>
+
 
 
 
