--- a/index.html
+++ b/index.html
@@ -789,25 +789,40 @@ const songAnimations = {
 };
 
 const playlists = {
-list1: [
-"Anugundu Abhishek(LOT-III).mp3", "DSK on the move(LOT-III).mp3", "Hyper Harishankar(LOT-III).mp3",
-"Intermission(LOT-III).mp3", "Jishnu Anthem Reprise(LOT-III).mp3", "The fight(LOT-III).mp3",
-"King in the universe(LOT-III).mp3", "King vs Harold(LOT-III).mp3", "LOT-III teaser concert.mp3",
-"LOT-III Theme(LOT-III).mp3", "Saavachuruven unna(LOT-III).mp3", "Sivagasi's Daaha(LOT-III).mp3",
-"Sivagasi's Dahaa x Saavachuruven unna(LOT-III).mp3",
-"The namechange(LOT-III).mp3", "Vadakku Sadhuram il Jishnu(LOT-III).mp3", "Flute anthem.mp3"
-],
-list4: [
-"Item number 1(LOT-III).mp3", "Saavadi Saravedi(LOT-III).mp3"
-],
-list2: [
-"Jishnu Anthem.mp3", "Jishnu anthem Thalapathy Vijay vocal.mp3", // <-- FIX APPLIED HERE
-"Jishnu Anthem slowed and reverbed.mp3", "Jishnu Anthem Karoke.mp3"
-],
-list3: [
-"Harishankar ku irukka.mp3", "Happy Birthday Megharajan.mp3",
-"Bomb.mp3", "Sanjai.mp3" 
-]
+    list1: [
+        "Anugundu Abhishek(LOT-III).mp3", 
+        "DSK on the move(LOT-III).mp3", 
+        "Hyper Harishankar(LOT-III).mp3",
+        "Intermission(LOT-III).mp3", 
+        "Jishnu Anthem Reprise(LOT-III).mp3", 
+        "The fight(LOT-III).mp3",
+        "King in the universe(LOT-III).mp3", 
+        "King vs Harold(LOT-III).mp3", 
+        "LOT-III teaser concert.mp3", // Matches your screenshot name
+        "LOT-III Theme(LOT-III).mp3", 
+        "Saavachuruven unna(LOT-III).mp3", 
+        "Sivagasi's Daaha(LOT-III).mp3",
+        "Sivagasi's Dahaa x Saavachuruven unna(LOT-III).mp3",
+        "The namechange(LOT-III).mp3", 
+        "Vadakku Sadhuram il Jishnu(LOT-III).mp3", 
+        "Flute anthem.mp3" // Matches your screenshot name
+    ],
+    list4: [
+        "Item number 1.mp3", // Screenshot: "Item number 1.mp3"
+        "Saavadi Saravedi.mp3" // Ensure this matches your upload exactly
+    ],
+    list2: [
+        "Jishnu Anthem.mp3", 
+        "Jishnu anthem Thalapathy Vijay vocal.mp3",
+        "Jishnu Anthem slowed and reverbed.mp3", 
+        "Jishnu Anthem Karoke.mp3"
+    ],
+    list3: [
+        "Harishankar ku irukka.mp3", 
+        "Happy Birthday Megharajan.mp3",
+        "Bomb3.mp3", // Updated to match screenshot "Bomb3.mp3"
+        "Sanjai.mp3" 
+    ]
 };
 
 // Helper function to map Display Name (from 'artists' object) to a simplified DB key
@@ -936,9 +951,12 @@ item.innerHTML = `
                <div class="trendingViews" id="views-${song.dbName}">${artist} • ${formatViews(currentViews)}</div>
            </div>
        `;
-
 item.onclick = (e) => {
-e.stopPropagation();
+    e.stopPropagation();
+    if (playlistId) {
+        playSong(playlistId, playlistIndex); // Removed the alert restriction
+    }
+};
 if (playlistId) {
 // Check for "Dropping Soon" restrictions before playing
 const isRestricted = (playlistId === 'list4') || 
@@ -1036,14 +1054,18 @@ if(id === 'list1') playlists[id].sort();
 let listElem = document.getElementById(id);
 
 playlists[id].forEach((song, idx)=>{
-let clean = song.replace(".mp3","");
-let displayName = clean;
-if(clean === "Harishankar ku irukka") displayName = "Harishankar ku irukka?";
-if(clean === "Bomb") displayName = "Bomb (Endhu 1cm)";
-if(clean === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
-if(clean === "Flute anthem") displayName = "Flute anthem(LOT-III)";
-if(clean === "Jishnu Anthem Thalapathy Vijay vocal") displayName = "Jishnu Anthem Thalapathy Vijay Vocal";
-if(clean === "LOT-III teaser concert") displayName = "LOT-III teaser concert(LOT-III)"; // ⬅️ **THIS IS THE CRITICAL MISSING LINE**
+    let fileName = song.replace(".mp3","");
+    let displayName = fileName;
+
+    // Mapping filenames to Pretty Display Names
+    if(fileName === "Bomb3") displayName = "Bomb (Endhu 1cm)";
+    if(fileName === "Sanjai") displayName = "Sanjai's room (Endhu 1cm)";
+    if(fileName === "Flute anthem") displayName = "Flute Anthem (LOT-III)";
+    if(fileName === "LOT-III teaser concert") displayName = "LOT-III Teaser Concert (LOT-III)";
+    if(fileName === "Harishankar ku irukka") displayName = "Harishankar ku irukka?";
+    if(fileName === "Item number 1") displayName = "Item Number 1 (LOT-III)";
+    
+    // For others that already have (LOT-III) in filename, it will display naturally.
 
 // 🆕 Increment view will now work for ALL songs played
 incrementView(displayName);
@@ -1059,8 +1081,10 @@ if (id === 'list1' && (displayName === "Flute anthem(LOT-III)" || displayName ==
 
 div.innerHTML = `<div><strong>${displayName}</strong><br><span>${artist}</span></div><span style="font-size:10px;">▶</span>`;
 
-div.onclick = (e) => { 
-e.stopPropagation(); 
+div.onclick = (e) => { 
+    e.stopPropagation(); 
+    playSong(id, idx); // Removed the alert restriction entirely
+};
 
 if (id === 'list4' || (id === 'list1' && displayName !== "Flute anthem(LOT-III)"&& 
                       displayName !== "LOT-III teaser concert(LOT-III)")) {
@@ -1247,6 +1271,7 @@ return min + ":" + sec;
 </script>
 </body>
 </html>
+
 
 
 
